--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="card">
+	<img 
+		src="https://images.unsplash.com/photo-1603178455924-ef33372953bb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1936&q=80"
+		alt="pic">	
+	<h1>Pricing Card</h1>
+		<p>
+			Price:Rs.200<br>
+		Description:Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, fugiat!
+		</p>
+		<button>Buy Now</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
